fix(presences): MA-715 Fix calendar tooltip displayed behind calendar previous button

--- a/presences/src/main/resources/public/sass/global/components/containers/_calendar.scss
+++ b/presences/src/main/resources/public/sass/global/components/containers/_calendar.scss
@@ -108,6 +108,7 @@ $calendar-user-card-height: 56px;
 
       .next-timeslots, .previous-timeslots {
         margin-bottom: 0;
+        z-index: 500 !important;
 
         &::before {
           @include fonticon();
